<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">小说阅读器</string>
    <string name="main_title">我的书架</string>
    <string name="search_title">找书</string>
    <string name="loading_zzjz">加载中...</string>
    <string name="net_not_connected">请检查网络连接</string>
    <string name="title">标题</string>
    <string name="read">阅</string>
    <string name="toast">系统提示</string>
    <string name="cancel">返回</string>
    <string name="abolish">取消</string>
    <string name="ok">确定</string>
    <string name="app_about">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;自从“读书巴士”不能搜索站外小说后，市场上就找不到可以搜索免费小说的阅读器了。所以我决定自己做一个阅读器，自己和朋友们用起来还不错，所以就分享给大家。\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;阅读器现在只能搜索有限几个网站，如果大家觉得哪个免费网站的小说更新快，可以在“意见与建议里”给我发邮件，我有时间的话就加上。谢谢大家支持！</string>
    <string name="app_about_add">1．点击首页的按钮“＋”，进入找书界面直接搜索。\n2．点击首页的按钮“＋”，进入找书界面再点击按钮“本地”，选择手机上的一个“.txt”文件，就可以导入本地小说。\n3．点击首页底部的标签“浏览器”，可以像普通浏览器一样查看网页，进入一个小说目录页如“http://m.shuyuewu.com/info-33236/”，点击底部按钮“加入书架”。\n4．在“浏览器”进入一个小说内容页如“https://www.douban.com/note/148195310/”，<b>长按</b>底部按钮“加入书架”。</string>
    
    <string-array name="book_menu">
        <item>置顶</item>
        <item>更新本书</item>
        <item>修改名字</item>
        <item>查看详情</item>
        <item>查看目录</item>
        <item>查看原网页</item>
        <item>搜索此小说</item>
        <item>百度搜索此小说</item>
        <item>搜读搜索此小说</item>
        <item>删除</item>
    </string-array>
    <string-array name="update_menu">
        <item>智能下载本章</item>
        <item>下载本章及后续章节</item>
        <item>手工选择下载点</item>
    </string-array>
    <string-array name="save_menu">
        <item>保存为文字小说</item>
        <item>保存为图片小说</item>
        <item>保存本页的文本</item>
        <item>保存本页的图片</item>
    </string-array>
    <string-array name="delete_chapter_menu">
        <item>删除本章之前的所有章节</item>
        <item>删除本章之后的所有章节</item>
    </string-array>
    <string-array name="delete_pic_menu">
        <item>删除此图片</item>
        <item>删除之前的所有图片</item>
        <item>删除之后的所有图片</item>
        <item>删除本章的所有图片</item>
        <item>删除地址不包含字符串的所有图片</item>
    </string-array>
    <string-array name="voicer_cloud_entries">
        <item>小燕—女青、中英、普通话</item>
        <item>小宇—男青、中英、普通话</item>
        <item>凯瑟琳—女青、英</item>
        <item>亨利—男青、英</item>
        <item>玛丽—女青、英</item>
        <item>小研—女青、中英、普通话</item>
        <item>小琪—女青、中英、普通话</item>
        <item>小峰—男青、中英、普通话</item>
        <item>小梅—女青、中英、粤语</item>
        <item>小莉—女青、中英、台湾普通话</item>
        <item>小蓉—女青、中、四川话</item>
        <item>小芸—女青、中、东北话</item>
        <item>小坤—男青、中、河南话</item>
        <item>小强—男青、中、湖南话</item>
        <item>小莹—女青、中、陕西话</item>
        <item>小新—男童、中、普通话</item>
        <item>楠楠—女童、中、普通话</item>
        <item>老孙—男老、中、普通话</item>
    </string-array>
    <string-array name="voicer_cloud_values">
        <item>xiaoyan</item>
        <item>xiaoyu</item>
        <item>catherine</item>
        <item>henry</item>
        <item>vimary</item>
        <item>vixy</item>
        <item>xiaoqi</item>
        <item>vixf</item>
        <item>xiaomei</item>
        <item>xiaolin</item>
        <item>xiaorong</item>
        <item>xiaoqian</item>
        <item>xiaokun</item>
        <item>xiaoqiang</item>
        <item>vixying</item>
        <item>xiaoxin</item>
        <item>nannan</item>
        <item>vils</item>
    </string-array>

</resources>